# Atividade-Obrigatoria-2025-06-18

./: AgentCraft-CTBA_Relatório_Análise_de_CSV.docx  README.md  Referências.txt
scripts/: .dockerignore  .gcloudignore  .gitignore  AgentRAGStreamlit.py  Dockerfile  GraphRAGAgent.py  LangGraphAgent.ipynb  LangGraphAgent.py  LangGraphAgent_streamlit.py  Perguntas_e_Respostas.ipynb  README.md  pyproject.toml  requirements.txt  testing.ipynb
scripts/tools/: data_ingestion.py  download_and_extract.py  my_graph_tools.py
